# cykubed-runner

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  cloudbuild.yaml  generate.py  pyproject.toml  pytest.ini  release.py  release.sh  requirements.txt
.github/workflows/: deploy.yaml  tests.yaml
cloudbuild/: base.yaml  full.yaml
data/: example-test-run-result.json
dockerfiles/: common.py  cypress.Dockerfile  genbase.py  generate.py  playwright.Dockerfile  release.py  versions.json
dockerfiles/base/: Dockerfile
dockerfiles/base/cypress/: Dockerfile
dockerfiles/base/node/: Dockerfile
dockerfiles/base/playwright/: Dockerfile
dockerfiles/base/runner/: Dockerfile
dockerfiles/chrome/: Dockerfile
dockerfiles/chrome-node16.13.0/: Dockerfile
dockerfiles/chrome-node16.x/: Dockerfile
dockerfiles/full/: Dockerfile
dockerfiles/full/app/: Dockerfile
dockerfiles/full/cypress/: Dockerfile
dockerfiles/full/runner/: Dockerfile
dockerfiles/legacy/: release.py
dockerfiles/node16.13.0/: Dockerfile
dockerfiles/node16.x/: Dockerfile  nodesource.list
dockerfiles/templates/: base-browser.tpl  chrome-current.tpl  cloudbuild-step.tpl  cloudbuild.tpl  node.tpl
dockerfiles/templates/base/: edge.tpl  (+8 more)
scripts/: build-base-images.sh  build-docker.sh  build-full-images.sh  build-minikube.sh  build_and_run.sh  init-minikube.sh  local-update.sh  minikube-build.sh  push-docker.sh  run-build.sh  run-cypress.sh  runner-images.sql  runnerpod.yaml  testpvc.yaml  update-runner-images-remote.sh  update-runner-images.sh
scripts/cloudbuild/: build-docker.sh  payload.json  push-docker.sh
scripts/snapshot/: build-job.yaml  build-pod.yaml  build-pvc.yaml  clone-job.yaml  dummy-build.yaml  pvc.yaml  rbac.yaml  ro-pvc.yaml  runner-snapshot.yaml  runner1-ro.yaml  runner2-ro.yaml  snapshot-test.yaml  snapshot.yaml  storage-class.yaml  test-pod.yaml
src/: app.py  build.py  builder.py  clone.py  cypress.py  httpclient.py  jobs.py  logging.py  logs.py  main.py  mongo.py  printtest.py  run.py  server.py  settings.py  testbed.py  utils.py
src/cykubedrunner/: app.py  baserunner.py  builder.py  cypress.py  json-reporter.js  main.py  playwright.py  runner.py  server.py  settings.py  utils.py
templates/: Dockerfile.tpl
testbed/: redistests.py
tests/: conftest.py  test_build.py  test_clone.py  test_cypress.py  test_cypress_parse.py  test_cypress_run.py  test_cypress_spec_parse.py  test_parse.py  test_playwright.py  test_playwright_parse.py  test_run.py  test_specs.py  test_upload.py
tests/fixtures/: dummy-dist.tar.lz4  dummy-dist.tgz
(+54 files in other folders)
