[tool.poetry]
name = "cykuberunner"
version = "0.1.0"
description = ""
authors = ["nick <nickbrook72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.3"
httpx = "^0.23.1"
wcmatch = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
respx = "^0.20.1"
pre-commit = "^2.20.0"
pytest-asyncio = "^0.20.2"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
