[tool.poetry]
name = "cykube-runner"
version = "0.1.0"
description = ""
authors = ["nick <nick@cykube.net>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#packages = [
#  { include = "src/**/*.py"}
#]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
httpx = "^0.23.1"
wcmatch = "^8.4.1"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
respx = "^0.20.1"
pre-commit = "^2.20.0"
pytest-asyncio = "^0.20.2"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
