[tool.poetry]
name = "cykubed-runner"
version = "3.20.57"
description = "Builds and runs Cypress tests for the Cykubed platform"
authors = ["support <support@cykubed.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
  { include = "**/*.py", from = "src"}
]

[tool.poetry.scripts]
cykubedrunner = "cykubedrunner.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
httpx = "^0.24.1"
wcmatch = "^8.4.1"
loguru = "^0.6.0"
sentry-sdk = {extras = ["httpx"], version = "*"}
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"
aioshutil = "^1.3"
google-cloud-logging = "^3.5.0"
tenacity = "^8.2.2"
pyyaml = "^6.0"
dnspython = "^2.4.2"
click = "^8.1.7"
psutil = "^5.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
respx = "^0.20.1"
pre-commit = "^2.20.0"
pytest-asyncio = "^0.20.2"
ipython = "^8.7.0"
pytest-mock = "^3.10.0"
pytest-github-report = "^0.0.1"
freezegun = "^1.2.2"
click = "^8.1.7"
semver = "^3.0.1"
jq = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=src/cykubedrunner/common"
testpaths = "tests"
python_classes = "!Test"

